--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -25,8 +25,9 @@
 
 .wrapper {
   margin: 1.5rem;
-  height: 45vh;
+  height: fit-content;
   padding-top: 1.5rem;
+  margin-top: 5rem;
 }
 
 .text {
@@ -44,4 +45,10 @@
 
 .forget_pass {
   margin-top: 18px;
+}
+
+.divider {
+  margin-top: 15px;
+  margin-bottom: 18px;
+  width: 50%;
 }
